# concept-aware-llms

./: .gitignore  README.md  baseline_concept_bert.ipynb  benchmark_results_wikitext.csv  llama.ipynb  pyproject.toml  requirements.txt  test.csv
concept-qwen/: .gitignore  LLM_judge_eval.py  README.md  benchmark_results.csv  benchmark_results_wikitext.csv  concept_decoder.py  concept_qwen_utilities.py  main.py  protoqa_benchmark.py  pyproject.toml  test_rocm.py  tutorial.txt
concept-qwen/concept_qwen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
concept-qwen/logs/1/: log.txt
concept-qwen/logs/10/: log.txt
concept-qwen/logs/100/: log.txt
concept-qwen/logs/11/: log.txt
concept-qwen/logs/13/: log.txt
concept-qwen/logs/14/: log 2.txt
concept-qwen/logs/15/: log.txt
concept-qwen/logs/16/: log.txt
concept-qwen/logs/17/: log 2.txt
concept-qwen/logs/18/: log.txt
concept-qwen/logs/19/: log.txt
concept-qwen/logs/2/: log 2.txt
concept-qwen/logs/20/: log.txt
concept-qwen/logs/22/: log.txt
concept-qwen/logs/23/: log.txt
concept-qwen/logs/24/: log.txt
concept-qwen/logs/25/: log.txt
concept-qwen/logs/26/: log.txt
concept-qwen/logs/27/: log.txt
concept-qwen/logs/28/: log.txt
concept-qwen/logs/29/: log.txt
concept-qwen/logs/3/: log.txt
concept-qwen/logs/30/: log.txt
concept-qwen/logs/31/: log.txt
concept-qwen/logs/32/: log.txt
concept-qwen/logs/33/: log.txt
concept-qwen/logs/35/: log.txt
concept-qwen/logs/36/: log.txt
concept-qwen/logs/37/: log.txt
concept-qwen/logs/38/: log.txt
concept-qwen/logs/39/: log.txt
concept-qwen/logs/4/: log.txt
concept-qwen/logs/40/: log.txt
concept-qwen/logs/41/: log.txt
concept-qwen/logs/42/: log.txt
concept-qwen/logs/44/: log.txt
concept-qwen/logs/45/: log.txt
concept-qwen/logs/46/: log.txt
concept-qwen/logs/47/: log.txt
concept-qwen/logs/48/: log.txt
concept-qwen/logs/49/: log.txt
concept-qwen/logs/50/: log.txt
concept-qwen/logs/51/: log.txt
concept-qwen/logs/52/: log.txt
concept-qwen/logs/53/: log.txt
concept-qwen/logs/54/: log.txt
old/concept-llama/: README.md  concept_decoder.py  main.py  pyproject.toml  test.py
old/concept-qwen/: benchmark_results_wikitext.csv  main.py  pyproject.toml
(+1634 files in other folders)
