[project]
name = "baseline"
version = "0.1.0"
requires-python = ">=3.9, <3.10"
dependencies = [
    "matplotlib>=3.9.4",
    "nltk>=3.9.1",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "textblob>=0.19.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "umap-learn>=0.5.9.post2",
]
