# concept-qwen/pyproject.toml
[project]
name = "concept-qwen"
version = "0.1.0"
description = "Concept-aware decoding for the Qwen model."
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "nltk>=3.8",
    "datasets>=2.19",            # for loading benchmark data
    "sentence-transformers>=2.7", # for semantic similarity scoring
    "matplotlib>=3.8",           # for plotting concept clusters
    "pandas>=2.2"                # for saving benchmark results
]

[tool.setuptools]
py-modules = ["main", "concept_decoder", "concept_qwen_utilities"]
